--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>generics</module>
         <module>lambda</module>
+        <module>streams</module>
     </modules>
 
     <properties>
